fix: overflow y for search

--- a/my-app/src/app/pages/introduction-page/introduction-page.component.css
+++ b/my-app/src/app/pages/introduction-page/introduction-page.component.css
@@ -244,7 +244,6 @@ app-search-bar {
     .container-info {
         width: 100%;
         height: 100%;
-        overflow-y: hidden;
     }
 
     .announcement {
